tests/fixtures/invalid/round_int_dict.py
# Cannot call round() with Int, Dict[str, int]
x = round(1, {"a": 1})
